# geffa

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg  sitemap.xml
.github/workflows/: mkdocs.yaml
docs/: index.md  reference.md
reference/: index.html
src/geffa/: __init__.py  geffa.py
