[build-system]
requires = [
    "setuptools>=61.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "geffa"
version = "0.2.1"
authors = [
    { name = "Uli Dobramysl", email = "ulrich.dobramysl@gmail.com" },
]
description = "Parse, manipulate and save GFF3 genome annotation files with python code."
requires-python = ">=3.8"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = [
    "src",
]
namespaces = false