[metadata]
name = geffa
version = 0.1.0
author = Uli Dobramysl
author_email = ulrich.dobramysl@gmail.com
description = Manipulate genome features in a GFF file
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src